--- a/defenseSystem/src/GUI/Helecopter.form
+++ b/defenseSystem/src/GUI/Helecopter.form
@@ -169,6 +169,9 @@
         <Property name="paintLabels" type="boolean" value="true"/>
         <Property name="paintTicks" type="boolean" value="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSlider1StateChanged"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
